tests/errors/interface_multiple_missing_fields.dang
# Test multiple missing interface fields

interface Contact {
  email: String!
  phone: String!
  name: String!
}

type Person implements Contact {
  name: String!
  # Missing: email and phone
}
